<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="280dp"
	android:layout_height="match_parent"
	android:layout_gravity="center_horizontal"
	android:layout_marginStart="16dp"
	android:layout_marginEnd="16dp"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/game_won_message"
		android:layout_width="match_parent"
		android:layout_height="128dp"
		android:background="@drawable/bg_dialog"
		android:gravity="center"
		android:orientation="vertical"
		android:paddingTop="24dp"
		android:paddingBottom="40dp"
		android:visibility="visible">

		<ImageView
			android:id="@+id/game_won_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_game_won" />

		<TextView
			android:id="@+id/game_won_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/game_won"
			android:textColor="@color/colorLight"
			android:textSize="24sp"
			android:textStyle="bold" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/game_over_message"
		android:layout_width="match_parent"
		android:layout_height="128dp"
		android:background="@drawable/bg_dialog"
		android:gravity="center"
		android:orientation="vertical"
		android:paddingTop="24dp"
		android:paddingBottom="40dp"
		android:visibility="gone">

		<ImageView
			android:id="@+id/game_over_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_game_over" />

		<TextView
			android:id="@+id/game_over_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/game_over"
			android:textColor="@color/colorLight"
			android:textSize="24sp"
			android:textStyle="bold" />
	</LinearLayout>

	<TextView
		android:id="@+id/go_premium"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/bg_dialog"
		android:gravity="center"
		android:text="@string/go_premium"
		android:textColor="@color/colorLight"
		android:textSize="24sp"
		android:textStyle="bold"
		android:visibility="visible" />

	<TextView
		android:id="@+id/rate_app"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/bg_dialog"
		android:gravity="center"
		android:text="@string/rate_app"
		android:textColor="@color/colorLight"
		android:textSize="24sp"
		android:textStyle="bold"
		android:visibility="visible" />

	<TextView
		android:id="@+id/game_ended_restart"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/bg_dialog"
		android:gravity="center"
		android:text="@string/restart"
		android:textColor="@color/colorLight"
		android:textSize="24sp"
		android:textStyle="bold"
		android:visibility="visible" />

	<LinearLayout
		android:id="@+id/game_ended_difficulty_selector"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/bg_dialog"
		android:orientation="horizontal"
		android:visibility="gone"
		android:weightSum="3">

		<ImageView
			android:id="@+id/game_ended_easy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:padding="12dp"
			android:src="@drawable/ic_easy_difficulty" />

		<ImageView
			android:id="@+id/game_ended_medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:padding="12dp"
			android:src="@drawable/ic_medium_difficulty" />

		<ImageView
			android:id="@+id/game_ended_hard"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:padding="12dp"
			android:src="@drawable/ic_hard_difficulty" />
	</LinearLayout>
</LinearLayout>